# youtube-transcript-pipeline

./: .env.example  .gitignore  AUTO_GROWING_PIPELINE_VISION.md  CHANGELOG.md  CONTRIBUTOR_ONBOARDING.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  MIGRATION_PLAN.md  NotebookLM_limits.md  PIPELINE_IMPLEMENTATION_BRIEF.md  PRE_API_CHECKLIST.md  PRE_API_CHECKLIST_RESEARCH.md  PROJECT_DOCUMENTATION.md  PUBLIC_RELEASE_RISK_ASSESSMENT.md  README.md  REPOSITORY_STRUCTURE_PROPOSAL.md  TRANSCRIPT_COLLECTION_ANALYSIS.md  bootstrap.ps1  bootstrap.sh  inject_urls.py  merge_transcripts.py  merge_with_urls.py  pyproject.toml
.github/workflows/: ci.yml  live-smoke.yml
examples/sample_chunked/: EXAMPLE_PART_01.md
examples/sample_raw/: aaa111bbb22.md  ccc333ddd44.md
yt_processor/: CIA_INTEL_VIDEO_LIST.txt  COMPUTER2_INSTRUCTIONS.md  ONE_CHAMPIONSHIP_FIGHTER_LIST.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE_REPORT.md  PRODUCTION_RECOMMENDATION.md  README.md  TAWANCHAI_VIDEO_REPORT.md  __init__.py  advanced_filter_one_championship.py  alchemical_full_list.txt  alchemical_science_videos.json  alchemical_url_map.json  alchemical_video_list.txt  analyze_all_channels.py  audit_transcript_collections.py  auto_embed.py  benchmark_results.json  build_collection_provenance.py  build_transcript_video_sidecars.py  channel_registry.json  cleanup_gibberish_md.py  coachmicahb_categorized.txt  coachmicahb_titles.txt  collection_registry.json  collection_utils.py  combatathletephysio_categorized.txt  combatathletephysio_titles.txt  convert_raw_transcripts.py  cost_tracker.py  create_final_catalog.py  create_jay_campbell_sidecar.py  danny_jones_all.txt  daru_categorized.txt  daru_titles.txt  deep_analyze_uncategorized.py  download_alchemical.py  download_alchemical_transcripts.py  download_qa_sources.py  embedding_generator.py  (+65 more)
yt_processor/legacy_scripts_backup/: chunk_mark_bell.py  create_huberman_notebook_chunks.py  download_all_channels.py  download_bika_ai_videos.py  download_channel_transcripts.py  download_daru_transcripts.py  download_heatrick_extras.py  download_heatrick_playlists.py  download_huberman_essentials.py  download_huberman_full.py  download_huberman_full_fixed.py  download_mark_bell_final.py  download_mark_bell_part1.py  download_mark_bell_part2.py  download_mark_bell_ultimate.py  download_muaythai_channel.py  download_one_champ_optimized_3workers.py  (+14 more)
(+20 files in other folders)
